--- a/src/components/element/index.module.scss
+++ b/src/components/element/index.module.scss
@@ -9,12 +9,16 @@
     div {
       position: absolute;
     }
-    img,
     canvas {
       left: 0;
       top: 0;
       width: 100%;
       height: 100%;
+    }
+    img {
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
